# Qar_imageProccesing

./: .dockerignore  .env.example  .env.runpod  .gitignore  ARCHITECTURE.MD  DEPLOYMENT_RUNPOD.md  Dockerfile.runpod  HANDOFF.md  Makefile  README.md  RUNBOOK.md  Untitled-1.txt  analyze_existing_atlas.py  baseline_pipeline_metrics.json  baseline_segmentation_metrics.json  dashboard.py  debug_cap_61ca2229.txt  e2e_e2e_a_manifest.json  e2e_e2e_b_manifest.json  e2e_e2e_c_manifest.json  e2e_phase2e_e2e_a_manifest.json  e2e_phase2e_e2e_b_manifest.json  e2e_phase2e_e2e_c_manifest.json  final_quality_test.py  final_test_report.txt  finish_recon.py  gate.md  gpu_smoke_test.py  multi_validate.py  probe_mesh.py  pyproject.toml  pytest_out.txt  registry_test_out.txt  requirements.txt  roadmap.md  run_ablation_test.py  run_real_recon.py  run_worker_e2e.py  sam2_experiment_results.json  setup_env.ps1  (+12 more)
certs/: cert.pem  key.pem
docs/: AGENT_EXECUTION_REPORT.md  AI_3D_AGENT_IMPLEMENTATION_PLAN.md  AI_3D_DEFAULT_CONFIGURATION.md  AI_3D_EXTERNAL_PROVIDER_RESEARCH.md  AI_3D_PHASE1_MULTI_CANDIDATE_E2E_REPORT.md  AI_3D_PHASE1_SF3D_MULTI_CANDIDATE_E2E_REPORT.md  AI_3D_PHASE2C_BACKGROUND_REMOVAL_E2E_REPORT.md  AI_3D_PHASE2E_PREPROCESSING_AWARE_SCORING_E2E_REPORT.md  AI_3D_PHASE3A1_INPUT_SIZE_PROPAGATION_REPORT.md  AI_3D_PHASE3D_DEFAULTS_UI_API_E2E_REPORT.md  AI_3D_PHASE4B2_MESH_STATS_AR_READINESS_E2E_REPORT.md  AI_3D_PHASES_B_TO_G.md  AI_3D_SAFETY_INVARIANTS.md  AI_3D_SF3D_E2E_BENCHMARK_REPORT.md  AI_3D_SF3D_PROVIDER_INTEGRATION_REPORT.md  AI_FALLBACK_ROUTER.md  AI_GENERATED_3D_ARCHITECTURE.md  AI_PRODUCTION_GUARDRAILS.md  CAPTURE_QUALITY_SCORING.MD  DATASET_SCHEMA.md  DATA_RETENTION_AND_PRIVACY.md  EVALUATION_DATASET_EXPANSION_PLAN.md  GUIDED_CAPTURE_MIGRATION_PLAN.md  LEGACY_GLB_ROOT_CAUSE_FIX_REPORT.md  MESHY_GAP_ROADMAP.md  OPERATOR_RUNBOOK.md  P0_IMPLEMENTATION_CHECKLIST.md  PHASE_3B_DEPTH_STUDIO_REPORT.md  PHASE_6_0_EVALUATION_PROTOCOL.md  PHASE_6_1B_SAM2_VIDEO_TEMPORAL_PLAN.md  (+23 more)
(+723 files in other folders)
