[project]
name = "meshysiz-asset-factory"
version = "0.1.0"
description = "3D Asset Factory for Product Visualization"
authors = [{ name = "Meshysiz Team" }]
requires-python = ">=3.11"
dependencies = [
    "trimesh>=4.11,<4.12",
    "numpy>=2.2,<2.5",
    "opencv-python>=4.10,<4.14",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "xatlas",
    "fast-simplification",
    "rembg",
    "onnxruntime",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.pytest.ini_options]
testpaths = ["modules/*/tests", "tests"]
pythonpath = ["."]
